:pencil2: release_maker_config had wrong title

--- a/release_maker_cfg.json
+++ b/release_maker_cfg.json
@@ -1,4 +1,4 @@
 {
-  "project_title": "Kids First CKids First CKids First CKids First CKids First CKids First CKids First CKids First Cavatica Utilities",
+  "project_title": "Kids First Cavatica Utilities",
   "pre_release_script": ""
 }
